--- a/Resume/Experience.tex
+++ b/Resume/Experience.tex
@@ -34,4 +34,30 @@
        \item  {Automated deploys of applications/services to Pivotal Cloud Foundry through Jenkins, including stages such as builds, unit testing, integration/contract testing, and gateways to trigger those builds}
        \item  {Built pipeline for setting up environments and user access in Pivotal Cloud Foundry}
     }
+    
+  \cventry
+    {Automation Engineer} % Job title
+    {Ministry Brands - ParishSOFT} % Organization
+    {Ann Arbor, MI} % Location
+    {June 2016 - Dec 2017} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {Designed and Developed automated regression test suites using Java and Python-based Selenium for microservice deployments}
+        \item {Wrote JUnit tests to maintain 90 - 95 percent code coverage}
+        \item {Presented optimization reports in DevOps meetings to target performance weaknesses and improve user experience through suggested enhancements}
+      \end{cvitems}
+    }
+    
+    \cventry
+    {IT Technician} % Job title
+    {Eastern Michigan University} % Organization
+    {Ypsilanti, MI} % Location
+    {Feb 2012 - April 2014} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item {Provided support and assistance for classroom computers and equipment}
+        \item {Performed malware removal and hardware support for university-issued computers}
+        \item {Performed software maintenance and reimagining of lab computers and rented/faculty laptops}
+      \end{cvitems}
+    }
 \end{cventries}
