Three col tech stack, added some filler sections to make it two pages

--- a/asia-resume.tex
+++ b/asia-resume.tex
@@ -47,7 +47,7 @@
 %	Comment any of the lines below if they are not required
 %----------------------------------------------------------------------------------------
 
-\name{Asis .R}{Hall}
+\name{Asia .R}{Hall}
 \address{1002,  W Summerfield Glenn Cir, Ann Arbor, MI}
 \mobile{(+1) (734) 709- 8872}
 
@@ -85,12 +85,12 @@
 
 %\newpage % Force a new page for looks
 
-%\input{cv-sections/extracurricular.tex}
+\input{cv-sections/extracurricular.tex}
 %\input{cv-sections/honors.tex}
 %\input{cv-sections/presentation.tex}
-%\input{cv-sections/writing.tex}
-%\input{cv-sections/committees.tex}
-%\input{cv-sections/education.tex}
+\input{cv-sections/writing.tex}
+\input{cv-sections/committees.tex}
+\input{cv-sections/education.tex}
 
 %----------------------------------------------------------------------------------------
 
