--- a/cv-sections/skills.tex
+++ b/cv-sections/skills.tex
@@ -4,10 +4,6 @@
 
 \cvsection{Tech Stack}
 
-
-
-
-
 %----------------------------------------------------------------------------------------
 %	SECTION CONTENT
 %----------------------------------------------------------------------------------------
@@ -17,21 +13,15 @@
 %------------------------------------------------
 
 \cvskill
-{BACKEND} % Category
-{Java 8, \textbf{Spring Framework}, Spring Boot 2, Gradle, \textbf{JUnit 4}, Mockito,  MSSQL , Liquibase, Postman, Swagger, GraphDB ,Neo4J, Python. } % Skills
-
-%------------------------------------------------
-
+{\textbf{BACKEND}} {\textbf{FRONTEND}} {\textbf{DEVOPS}}
 \cvskill
-{FRONTEND} % Category
-{\textbf{Angular 7}, Typescript, NodeJS , Jasmine, Karma, \textbf{Mockito}, SCSS, Selenium, PrimeNG ,Robot Framework.} % Skills
-
-%------------------------------------------------
-
+{Java 8, Spring Framework}{Angular 7, NodeJS, PrimeNG}{Groovy, Python}
 \cvskill
-{DEVOPS} % Category
-{Jenkins, \textbf{Groovy}, Pivotal Cloud Foundry, JIRA, Confluence, GitHub, Dynatrace, \textbf{Splunk}.} % Skills
-
-%------------------------------------------------
-
+{JUnit 4, Mockito, RestAssured}{Jasmine, Karma, Selenium}{Cloud Foundry, JMeter}
+\cvskill
+{SQL, MongoDB, GraphDB, Liquidbase.}{Typescript, SCSS, HTML}{Swagger Docs, IntelliJ Idea, git}
+\cvskill
+{Apache Kafka, SonarQube}{InVision, Materail UI}{Splunk, Dyanatrace}
+\cvskill
+{NGINX, Apache, Slack}{npm,  Chrome Developer Tools}{Jira, Gradle, Checkmarx}
 \end{cvskills}
