Hey now it's one page yay clean

--- a/cv-sections/education.tex
+++ b/cv-sections/education.tex
@@ -14,11 +14,12 @@
 
 \cventry
 {Bachelor of Science in Molecular Biology} % Degree
-{Eastern Michgan University} % Institution
+{Eastern Michigan University} % Institution
 {Ypsilanti, MI} % Location
-{Mar. 2010 - PRESENT} % Date(s)
+{} % Date(s)
 { }% Description(s) bullet points
 
 %------------------------------------------------
 
 \end{cventries}
+\vspace{-5pt}
