--- a/cv-sections/experience.tex
+++ b/cv-sections/experience.tex
@@ -74,8 +74,8 @@
 
 %------------------------------------------------
 \cventry
-{IT Technican} % Job title
-{Easter Michigan University} % Organization
+{IT Technician} % Job title
+{Eastern Michigan University} % Organization
 {Ypsilanti, MI} % Location
 {Feb. 2012 - April. 2014} % Date(s)
 { % Description(s) of tasks/responsibilities
@@ -86,3 +86,4 @@
 \end{cvitems} 
 }
 \end{cventries}
+\vspace{-5pt}
