--- a/cv-sections/skills.tex
+++ b/cv-sections/skills.tex
@@ -19,9 +19,9 @@
 \cvskill
 {JUnit 4, Mockito, RestAssured}{Jasmine, Karma, Selenium}{Cloud Foundry, JMeter}
 \cvskill
-{SQL, MongoDB, GraphDB, Liquidbase.}{Typescript, SCSS, HTML}{Swagger Docs, IntelliJ Idea, git}
+{SQL, MongoDB, GraphDB, Liquibase.}{Typescript, SCSS, HTML}{Swagger Docs, IntelliJ Idea, git}
 \cvskill
-{Apache Kafka, SonarQube}{InVision, Materail UI}{Splunk, Dyanatrace}
+{Apache Kafka, RabbitMQ, SonarQube}{InVision, Materail UI}{Splunk, Dynatrace}
 \cvskill
 {NGINX, Apache, Slack}{npm,  Chrome Developer Tools}{Jira, Gradle, Checkmarx}
 \end{cvskills}
