--- a/asia-resume.tex
+++ b/asia-resume.tex
@@ -26,7 +26,7 @@
 
 \documentclass[11pt, a4paper]{awesome-cv} % A4 paper size by default, use 'letterpaper' for US letter
 
-\geometry{left=2cm, top=1.5cm, right=2cm, bottom=2cm, footskip=.5cm} % Configure page margins with geometry
+\geometry{left=1cm, top=0.5cm, right=1cm, bottom=1cm, footskip=.5cm} % Configure page margins with geometry
 
 \fontdir[fonts/] % Specify the location of the included fonts
 
@@ -47,14 +47,12 @@
 %	Comment any of the lines below if they are not required
 %----------------------------------------------------------------------------------------
 
-\name{Asia .R}{Hall}
+\name{Asia R.}{Hall}
 \address{1002,  W Summerfield Glenn Cir, Ann Arbor, MI}
 \mobile{(+1) (734) 709- 8872}
 
-\email{asia.hall@gmail.com}
+\email{ahall4454@gmail.com}
 %\homepage{www.posquit0.com}
-\github{ahall}
-\linkedin{ahall}
 %\skype{skypeid}
 %\stackoverflow{SOid}{SOname}
 %\twitter{@twit}
@@ -79,18 +77,20 @@
 %	Each section is imported separately, open each file in turn to modify content
 %----------------------------------------------------------------------------------------
 
-\input{cv-sections/summary.tex}
+\input{cv-sections/summary.tex}\unskip
+\vspace{-5pt}
 \input{cv-sections/skills.tex}
-\input{cv-sections/experience.tex}
+\vspace{-5pt}
+\input{cv-sections/experience.tex}\unskip
+\vspace{-5pt}
+\input{cv-sections/education.tex}\unskip
+\vspace{-5pt}
 
 %\newpage % Force a new page for looks
 
-\input{cv-sections/extracurricular.tex}
 %\input{cv-sections/honors.tex}
 %\input{cv-sections/presentation.tex}
-\input{cv-sections/writing.tex}
-\input{cv-sections/committees.tex}
-\input{cv-sections/education.tex}
+
 
 %----------------------------------------------------------------------------------------
 
