I guess I forgot my level

--- a/cv-sections/experience.tex
+++ b/cv-sections/experience.tex
@@ -42,7 +42,7 @@
 \item {Reduced network call lag using results paging.}
 \end{cvitems}
 }
-%\vskip 0.8mm
+\vskip -0.5mm
 \cventry
 {DevOps Notes} {}{} {} % Sub heading for full stack ***** dont delete these empty brackets, \cventry needs 5 of these.
 { % Description(s) of tasks/responsibilities
