removed date and page number

--- a/asia-resume.tex
+++ b/asia-resume.tex
@@ -64,7 +64,9 @@
 \position{Full Stack Developer{\enskip\cdotp\enskip}CI/CD Expert} % Your expertise/fields
 %\quote{``Make the change that you want to see in the world."} % A quote or statement
 
-\makecvfooter{\today}{Asia R. Hall~~~·~~~Résumé}{\thepage} % Specify the letter footer with 3 arguments: (<left>, <center>, <right>), leave any of these blank if they are not needed
+%\makecvfooter{\today}{Asia R. Hall~~~·~~~Résumé}{\thepage} if page number and date is needed this how we bring it back
+
+\makecvfooter{}{Asia R. Hall~~~·~~~Résumé}{} % Specify the letter footer with 3 arguments: (<left>, <center>, <right>), leave any of these blank if they are not needed
 
 %----------------------------------------------------------------------------------------
 
