typo and missed jenkins in tech stack

--- a/cv-sections/experience.tex
+++ b/cv-sections/experience.tex
@@ -58,7 +58,7 @@
 %------------------------------------------------    
 \vskip 2mm
 \cventry
-{Automantion Engineer} % Job title
+{Automation Engineer} % Job title
 {Ministry Brands - ParishSOFT} % Organization
 {Ann Arbor, MI} % Location
 {June. 2016 - Dec. 2017} % Date(s)
