--- a/cv-sections/skills.tex
+++ b/cv-sections/skills.tex
@@ -15,7 +15,7 @@
 \cvskill
 {\textbf{BACKEND}} {\textbf{FRONTEND}} {\textbf{DEVOPS}}
 \cvskill
-{Java 8, Spring Framework}{Angular 7, NodeJS, PrimeNG}{Groovy, Python}
+{Java 8, Spring Framework}{Angular 7, NodeJS, PrimeNG}{Jenkins, Groovy, Python}
 \cvskill
 {JUnit 4, Mockito, RestAssured}{Jasmine, Karma, Selenium}{Cloud Foundry, JMeter}
 \cvskill
